src/app/css/modeler.css
/*
Copyright 2013 Esri
 Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
 http://www.apache.org/licenses/LICENSE-2.0
 Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
html, body, .mdlrMap, .mdlrAppContainer {
    height:100%;
    width:100%;
    margin:0;
    padding:0;
}
body {
    background-color:#FFF;
    overflow:hidden;
    font-family:"Trebuchet MS";
}

/*custom classes*/
.group:after {
  content: "";
  display: table;
  clear: both;
}
.clearfix:after {
  content: "";
  display: table;
  clear: both;
}
.group .left {
  float: left;
}
.group .right {
  float: right;
}
.mdlrFloatingPane {
  position: absolute;
  /* appear over map, but under map pop up */
  z-index: 35;
  color:#000;
  background-color:#fff;
  border: 2px solid #666666;
  -moz-border-radius:10px;
  -webkit-border-radius: 10px;
  border-radius: 10px;
}
.mdlrAppPane {
    left:10px;
    top:10px;
    width:340px;
}
.mdlrAppTitle {
  font-size: 1.2em;
  display: inline-block;
}
.mdlrAppLinks {
  text-align: right;
}

.mdlrScrollPanel,  .weighted-overlay-model-designer {
  height: 300px;
  min-height: 300px;
  width: 100%;
  overflow: auto;
}
.mdlrModelContainer {
  margin: 10px;
}
.mdlrLoadingPane {
  background-color: #FFFFFF;
  border: 2px solid #666666;
  border-radius: 5px 5px 5px 5px;
  top: 10px;
  color: #666666;
  left: 50%;
  position: absolute;
  width: 120px;
  z-index: 999;
  margin-left: -60px;
}
.mdlrLoadingMessage {
  background-image: url("./images/loading_circle_sm.gif");
  background-position: left center;
  background-repeat: no-repeat;
  margin: 10px;
  padding-left: 20px;
}


.mdlrResultsGrid {
	font-size:14px;
	font-weight:normal;
}

/* dgrid overrides */
.dgrid .dgrid-scroller {
	position: relative;
	max-height: 200px;
	overflow: auto;
}

.dgrid-row-odd {
	background: #F0F0F0;
}

/* to hide columns with id and tags */
.field-id {
	display: none;
}

.field-tags {
	display: none;
}

.field-modified {
	width: 20%;
}

.field-owner {
	width: 20%;
}

.modeler-color-ramp {
  font-size: inherit;
  vertical-align: bottom;
}

.modeler-color-ramp .modeler-color-ramp-color {
  height: 20px;
  width: 12px;
}

.mdlrButtons {
  margin: 10px 0;
}

.mdlrRight {
  float: right;
}

.mdlrLeft {
  float: left;
}

.mdlrChartPane
{
  position: absolute;
  bottom: 10px;
  left: 55%;
  /* appear over map, but under map pop up */
  z-index: 35;
  background-color: rgb(80, 80, 80);
  background-color: rgba(100, 100, 100, 0.8);
  border: 0 none;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.mdlrChartMessage {
  color: #FFFFFF;
  font-size: 0.9em;
  font-style: italic;
  margin: 0 0 5px;
  padding: 5px 10px 3px;
}
.mdlrChartsHeader {
  line-height: 20px;
  padding: 5px 10px 3px;
  color: #fff;
}
.mdlrChartsHeaderIcon {
  cursor: pointer;
  float: right;
  height: 16px;
  width: 16px;
}
/*TODO: use bootstrap class for icon*/
.mdlrChartsHeaderIconCollapse {
  background: url("../../lib/bootstrap_v2/img/glyphicons-halflings-white.png") no-repeat scroll -240px -95px transparent;
  font-size: 0;
  margin-right: 5px;
  opacity: 0.7;
}
.mdlrChartsHeaderIconMinimize {
  background: url("images/16x16_minimize_store.png") no-repeat top center;
  font-size:0;
  margin-right: 5px;
}
.mdlrChartsHeaderIconRestore {
  background: url("images/16x16_minimize_store.png") no-repeat bottom center;
  font-size:0;
  margin-right: 5px;
}
.mdlrChartsHeaderIconClose {
  background-image: url("images/16x16_X.png");
  font-size:0;
}

/* override dijit styles */
.claro .dijitButton .dijitButtonNode, .claro .dijitDropDownButton .dijitButtonNode, .claro .dijitComboButton .dijitButtonNode, .claro .dijitToggleButton .dijitButtonNode {
  background-color: #ddd;
  background-image: none;
  border: 1px solid #AAA;
}
.claro .dijitDialog {
  border: 1px solid #AAA;
  border-radius: 5px 5px 5px 5px;
  background: rgba(100, 100, 100, 0.8);
}
.claro .dijitDialogPaneContent {
    border-top: 1px solid #759DC0;
    margin: 0 8px 8px 8px;
}
.claro .dijitDialogTitleBar {
  background-color: transparent;
  background-image: none;
  border: 0;
}
.claro .dijitDialogTitle {
    color: #FFFFFF;
}
.claro .dijitDialogPaneActionBar {
  padding: 5px;
}
.claro .dijitDialogCloseIcon {
  background-image: url("images/16x16_X.png");
    margin-top: 3px;
  float: right;
  cursor: pointer;
}
.claro .dijitDialogCloseIcon {
  background-position: inherit;
}
.claro .dijitTitlePane {
  background-color: #666;
  border: 2px solid;
  border-color: #666;
  border-color: rgba(100, 100, 100, 0.8);
  border-radius: 5px 5px 5px 5px;
}
.claro .dijitTitlePaneTitle, .claro .dijitTitlePaneTitleBar {
  background-color: #666;
  background-image: none;
  border: 0;
}
.claro .dijitTitlePane .dijitArrowNode {
  background-image: url("images/spriteArrows.png");
  background-repeat: no-repeat;
  height: 8px;
  width: 7px;
}
.claro .dijitTitlePane .dijitTitlePaneTextNode {
  color: #fff;
}
.claro .dijitCheckedMenuItemIconChar {
  display: none
}

/* override esri styles */
.templatePicker {
  border: 0;
  border-radius: 0;
}
.templatePicker .grid .item {
  font-size: 11px;
}

.esriSimpleSliderTR {
    right: 10px;
    top: 10px;
}
.esriLegendServiceLabel, .templatePicker .grid .groupLabel {
  display: none;
}

/*feature layer controls - place above map in upper right corner*/
.mdlrFeatureLayerPaneTitlePane {
  position:absolute;
  left: 364px;
  top: 10px;
  z-index: 35;
}
.mdlrFeatureLayerPane .dijitToolbar {
  background: transparent;
  background-image: none;
  padding: 2px 0 2px 4px;
  text-align: center;
  border-bottom: 0;
}
.mdlrFeatureLayerPane .dijitContentPane {
  padding: 3px;
}
.mdlrFeatureLayerPane .dijitTitlePaneContentInner {
  padding: 0;
}
.mdlrLegend {
  max-height: 300px;
  overflow: auto;
}

/* map controls - float right above map */
.mdlrMapControls {
  position:absolute;
  right:54px;
  top:10px;
  z-index: 35;
}
.mdlrMapControls .dijitTitlePane {
  clear: right;
  float: right;
  margin-top: 6px;
}
.mdlrMapControls .simpleGeocoder {
  float: right;
}
.mdlrPortalControls {
  margin-bottom: 10px;
}
.mdlrAddFeatureLayerButtons {
  padding-top: 10px;
  text-align: center;
}
.mdlrPanelContainerContent {
  padding: 3px 3px 0 3px;
  margin: 5px;
  border-top: 1px solid rgb(192, 192, 192);
  border-top: 1px solid rgba(255, 255, 255, 0.25);
  text-align: center;
  background: #fff;
  -webkit-border-radius: 0 0 4px 4px;
  -moz-border-radius: 0 0 4px 4px;
  border-radius: 0 0 4px 4px;
}
.mdlrLoginMessage {
  margin: 300px auto;
  text-align: center;
  width: 600px;
}

